--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,25 @@ dist.dir=dist
 dist.jar=${dist.dir}/JasperReports.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-beanutils-1.5.jar=Jars\\commons-beanutils-1.5.jar
+file.reference.commons-collections-2.1.jar=Jars\\commons-collections-2.1.jar
+file.reference.commons-digester-1.7.jar=Jars\\commons-digester-1.7.jar
+file.reference.commons-javaflow-20060411.jar=Jars\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.0.2.jar=Jars\\commons-logging-1.0.2.jar
+file.reference.jasperreports-6.5.1.jar=Jars\\jasperreports-6.5.1.jar
+file.reference.jasperreports-fonts-6.5.1.jar=Jars\\jasperreports-fonts-6.5.1.jar
+file.reference.jasperreports-javaflow-6.5.1.jar=Jars\\jasperreports-javaflow-6.5.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jasperreports-6.5.1.jar}:\
+    ${file.reference.jasperreports-fonts-6.5.1.jar}:\
+    ${file.reference.jasperreports-javaflow-6.5.1.jar}:\
+    ${file.reference.commons-beanutils-1.5.jar}:\
+    ${file.reference.commons-collections-2.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +70,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=jasperreports.JasperReports
+main.class=jasperrports.UniversalGenerator
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
