--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.commons-logging-1.0.2.jar=Jars\\commons-logging-1.0.2.jar
 file.reference.jasperreports-6.5.1.jar=Jars\\jasperreports-6.5.1.jar
 file.reference.jasperreports-fonts-6.5.1.jar=Jars\\jasperreports-fonts-6.5.1.jar
 file.reference.jasperreports-javaflow-6.5.1.jar=Jars\\jasperreports-javaflow-6.5.1.jar
+file.reference.ojdbc8.jar=jars\\ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -45,7 +46,8 @@ javac.classpath=\
     ${file.reference.commons-collections-2.1.jar}:\
     ${file.reference.commons-digester-1.7.jar}:\
     ${file.reference.commons-javaflow-20060411.jar}:\
-    ${file.reference.commons-logging-1.0.2.jar}
+    ${file.reference.commons-logging-1.0.2.jar}:\
+    ${file.reference.ojdbc8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -70,7 +72,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=jasperrports.UniversalGenerator
+main.class=jasperreports.UniversalGenerator
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
