--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,27 +27,35 @@ dist.dir=dist
 dist.jar=${dist.dir}/JasperReports.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.commons-beanutils-1.5.jar=Jars\\commons-beanutils-1.5.jar
-file.reference.commons-collections-2.1.jar=Jars\\commons-collections-2.1.jar
-file.reference.commons-digester-1.7.jar=Jars\\commons-digester-1.7.jar
-file.reference.commons-javaflow-20060411.jar=Jars\\commons-javaflow-20060411.jar
-file.reference.commons-logging-1.0.2.jar=Jars\\commons-logging-1.0.2.jar
-file.reference.jasperreports-6.5.1.jar=Jars\\jasperreports-6.5.1.jar
-file.reference.jasperreports-fonts-6.5.1.jar=Jars\\jasperreports-fonts-6.5.1.jar
-file.reference.jasperreports-javaflow-6.5.1.jar=Jars\\jasperreports-javaflow-6.5.1.jar
-file.reference.ojdbc8.jar=jars\\ojdbc8.jar
+file.reference.com.lowagie.text-2.1.7.jar=resources\\com.lowagie.text-2.1.7.jar
+file.reference.commons-beanutils-1.5.jar=resources\\commons-beanutils-1.5.jar
+file.reference.commons-collections-3.2.jar=resources\\commons-collections-3.2.jar
+file.reference.commons-digester-1.7.jar=resources\\commons-digester-1.7.jar
+file.reference.commons-javaflow-20060411.jar=resources\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.0.2.jar=resources\\commons-logging-1.0.2.jar
+file.reference.groovy-all-3.0.0-alpha-1.jar=resources\\groovy-all-3.0.0-alpha-1.jar
+file.reference.jasperreports-6.5.1.jar=resources\\jasperreports-6.5.1.jar
+file.reference.jasperreports-fonts-6.5.1.jar=resources\\jasperreports-fonts-6.5.1.jar
+file.reference.jasperreports-javaflow-6.5.1.jar=resources\\jasperreports-javaflow-6.5.1.jar
+file.reference.jcommon-1.0.8.jar=resources\\jcommon-1.0.8.jar
+file.reference.jfreechart-1.0.12.jar=resources\\jfreechart-1.0.12.jar
+file.reference.ojdbc8.jar=resources\\ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jasperreports-6.5.1.jar}:\
-    ${file.reference.jasperreports-fonts-6.5.1.jar}:\
-    ${file.reference.jasperreports-javaflow-6.5.1.jar}:\
     ${file.reference.commons-beanutils-1.5.jar}:\
-    ${file.reference.commons-collections-2.1.jar}:\
+    ${file.reference.commons-collections-3.2.jar}:\
     ${file.reference.commons-digester-1.7.jar}:\
     ${file.reference.commons-javaflow-20060411.jar}:\
     ${file.reference.commons-logging-1.0.2.jar}:\
-    ${file.reference.ojdbc8.jar}
+    ${file.reference.jasperreports-6.5.1.jar}:\
+    ${file.reference.jasperreports-fonts-6.5.1.jar}:\
+    ${file.reference.jasperreports-javaflow-6.5.1.jar}:\
+    ${file.reference.ojdbc8.jar}:\
+    ${file.reference.groovy-all-3.0.0-alpha-1.jar}:\
+    ${file.reference.jcommon-1.0.8.jar}:\
+    ${file.reference.jfreechart-1.0.12.jar}:\
+    ${file.reference.com.lowagie.text-2.1.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
