--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=JasperReports
+application.vendor=User
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,34 +27,81 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/JasperReports.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.com.lowagie.text-2.1.7.jar=resources\\com.lowagie.text-2.1.7.jar
-file.reference.commons-beanutils-1.5.jar=resources\\commons-beanutils-1.5.jar
-file.reference.commons-collections-3.2.jar=resources\\commons-collections-3.2.jar
-file.reference.commons-digester-1.7.jar=resources\\commons-digester-1.7.jar
-file.reference.commons-javaflow-20060411.jar=resources\\commons-javaflow-20060411.jar
-file.reference.commons-logging-1.0.2.jar=resources\\commons-logging-1.0.2.jar
-file.reference.groovy-all-3.0.0-alpha-1.jar=resources\\groovy-all-3.0.0-alpha-1.jar
-file.reference.jasperreports-6.5.1.jar=resources\\jasperreports-6.5.1.jar
-file.reference.jasperreports-fonts-6.5.1.jar=resources\\jasperreports-fonts-6.5.1.jar
-file.reference.jcommon-1.0.8.jar=resources\\jcommon-1.0.8.jar
-file.reference.jfreechart-1.0.12.jar=resources\\jfreechart-1.0.12.jar
-file.reference.ojdbc8.jar=resources\\ojdbc8.jar
+file.reference.bcprov-jdk15on-1.52.jar=resources\\maven\\bcprov-jdk15on-1.52.jar
+file.reference.castor-core-1.3.3.jar=resources\\maven\\castor-core-1.3.3.jar
+file.reference.castor-xml-1.3.3.jar=resources\\maven\\castor-xml-1.3.3.jar
+file.reference.commons-beanutils-1.9.3.jar=resources\\maven\\commons-beanutils-1.9.3.jar
+file.reference.commons-collections-3.2.2.jar=resources\\maven\\commons-collections-3.2.2.jar
+file.reference.commons-digester-2.1.jar=resources\\maven\\commons-digester-2.1.jar
+file.reference.commons-lang-2.6.jar=resources\\maven\\commons-lang-2.6.jar
+file.reference.commons-logging-1.1.1.jar=resources\\maven\\commons-logging-1.1.1.jar
+file.reference.core-3.2.1-sources.jar=resources\\maven\\core-3.2.1-sources.jar
+file.reference.core-3.2.1.jar=resources\\maven\\core-3.2.1.jar
+file.reference.ecj-4.4.2-sources.jar=resources\\maven\\ecj-4.4.2-sources.jar
+file.reference.ecj-4.4.2.jar=resources\\maven\\ecj-4.4.2.jar
+file.reference.exec-maven-plugin-1.2.1.jar=resources\\maven\\exec-maven-plugin-1.2.1.jar
+file.reference.groovy-all-3.0.0-alpha-1.jar=resources\\maven\\groovy-all-3.0.0-alpha-1.jar
+file.reference.icu4j-57.1-sources.jar=resources\\maven\\icu4j-57.1-sources.jar
+file.reference.icu4j-57.1.jar=resources\\maven\\icu4j-57.1.jar
+file.reference.itext-2.1.7.js6.jar=resources\\maven\\itext-2.1.7.js6.jar
+file.reference.jackson-annotations-2.1.4.jar=resources\\maven\\jackson-annotations-2.1.4.jar
+file.reference.jackson-core-2.1.4.jar=resources\\maven\\jackson-core-2.1.4.jar
+file.reference.jackson-databind-2.1.4.jar=resources\\maven\\jackson-databind-2.1.4.jar
+file.reference.jakarta-regexp-1.4.jar=resources\\maven\\jakarta-regexp-1.4.jar
+file.reference.jasperreports-6.5.1.jar=resources\\maven\\jasperreports-6.5.1.jar
+file.reference.javax.inject-1.jar=resources\\maven\\javax.inject-1.jar
+file.reference.jcommon-1.0.23.jar=resources\\maven\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=resources\\maven\\jfreechart-1.0.19.jar
+file.reference.lucene-analyzers-common-4.5.1.jar=resources\\maven\\lucene-analyzers-common-4.5.1.jar
+file.reference.lucene-core-4.5.1.jar=resources\\maven\\lucene-core-4.5.1.jar
+file.reference.lucene-queries-4.5.1.jar=resources\\maven\\lucene-queries-4.5.1.jar
+file.reference.lucene-queryparser-4.5.1.jar=resources\\maven\\lucene-queryparser-4.5.1.jar
+file.reference.lucene-sandbox-4.5.1.jar=resources\\maven\\lucene-sandbox-4.5.1.jar
+file.reference.ojdbc8.jar=resources\\manual\\ojdbc8.jar
+file.reference.olap4j-0.9.7.309-JS-3.jar=resources\\maven\\olap4j-0.9.7.309-JS-3.jar
+file.reference.stax-1.2.0.jar=resources\\maven\\stax-1.2.0.jar
+file.reference.stax-api-1.0-2.jar=resources\\maven\\stax-api-1.0-2.jar
+file.reference.stax-api-1.0.1.jar=resources\\maven\\stax-api-1.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-beanutils-1.5.jar}:\
-    ${file.reference.commons-collections-3.2.jar}:\
-    ${file.reference.commons-digester-1.7.jar}:\
-    ${file.reference.commons-javaflow-20060411.jar}:\
-    ${file.reference.commons-logging-1.0.2.jar}:\
-    ${file.reference.jasperreports-6.5.1.jar}:\
-    ${file.reference.jasperreports-fonts-6.5.1.jar}:\
-    ${file.reference.ojdbc8.jar}:\
+    ${file.reference.bcprov-jdk15on-1.52.jar}:\
+    ${file.reference.castor-core-1.3.3.jar}:\
+    ${file.reference.castor-xml-1.3.3.jar}:\
+    ${file.reference.commons-beanutils-1.9.3.jar}:\
+    ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.core-3.2.1-sources.jar}:\
+    ${file.reference.core-3.2.1.jar}:\
+    ${file.reference.ecj-4.4.2-sources.jar}:\
+    ${file.reference.ecj-4.4.2.jar}:\
+    ${file.reference.exec-maven-plugin-1.2.1.jar}:\
     ${file.reference.groovy-all-3.0.0-alpha-1.jar}:\
-    ${file.reference.jcommon-1.0.8.jar}:\
-    ${file.reference.jfreechart-1.0.12.jar}:\
-    ${file.reference.com.lowagie.text-2.1.7.jar}
+    ${file.reference.icu4j-57.1-sources.jar}:\
+    ${file.reference.icu4j-57.1.jar}:\
+    ${file.reference.itext-2.1.7.js6.jar}:\
+    ${file.reference.jackson-annotations-2.1.4.jar}:\
+    ${file.reference.jackson-core-2.1.4.jar}:\
+    ${file.reference.jackson-databind-2.1.4.jar}:\
+    ${file.reference.jakarta-regexp-1.4.jar}:\
+    ${file.reference.jasperreports-6.5.1.jar}:\
+    ${file.reference.javax.inject-1.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.lucene-analyzers-common-4.5.1.jar}:\
+    ${file.reference.lucene-core-4.5.1.jar}:\
+    ${file.reference.lucene-queries-4.5.1.jar}:\
+    ${file.reference.lucene-queryparser-4.5.1.jar}:\
+    ${file.reference.lucene-sandbox-4.5.1.jar}:\
+    ${file.reference.olap4j-0.9.7.309-JS-3.jar}:\
+    ${file.reference.stax-1.2.0.jar}:\
+    ${file.reference.stax-api-1.0-2.jar}:\
+    ${file.reference.stax-api-1.0.1.jar}:\
+    ${file.reference.ojdbc8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
