--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -65,7 +65,9 @@ file.reference.stax-1.2.0.jar=resources\\maven\\stax-1.2.0.jar
 file.reference.stax-api-1.0-2.jar=resources\\maven\\stax-api-1.0-2.jar
 file.reference.stax-api-1.0.1.jar=resources\\maven\\stax-api-1.0.1.jar
 includes=**
-jar.compress=false
+jar.archive.disabled=${jnlp.enabled}
+jar.compress=true
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.bcprov-jdk15on-1.52.jar}:\
     ${file.reference.castor-core-1.3.3.jar}:\
@@ -126,7 +128,24 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=jasperreports.UniversalGenerator
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+main.class=jasper.generator.ConsoleFastGenerator
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
